@@ -1,5 +1,9 @@
 2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* WrapPanel.cs: Fixed MeasureOverride.
+
+2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* WrapPanel.cs: Implemented ArrangeOverride, MeasureOverride.
 
 2007-06-10  George Giolfan  <georgegiolfan@yahoo.com>
